Rework code and tests to consistently use exceptions